# Redit

./: .editorconfig  .gitignore  ATTRIBUTION.md  Cargo.toml  README.md  flake.nix  pladdra.txt
src/: client.rs  connect.rs  encryption.rs  logger.rs  logging.rs  main.rs  scan.rs  scan2.rs  server.rs  types.rs  upload.rs  utils.rs  words.py  words.rs  words.txt
