[package]
name = "redit"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
local-ip-address = "0.4"
argh = "0.1"
fernet = "0.2"
blake3 = "1.5"
base64 = "0.22.1"
getrandom = "0.3.0-rc.0"
vec_to_array = "0.2.5"
itertools = "0.10.0"

