[package]
name = "redit"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
local-ip-address = "0.4"
argh = "0.1"
fernet = "0.2"
blake3 = "1.5"
base64 = "0.22.1"
getrandom = "0.3.0-rc.0"
vec_to_array = "0.2.5"
itertools = "0.10.0"
rand = "0.8.5"
rsa = "0.9.7"
flate2 = "1.0.35"
tar = "0.4.43"
indicatif = "0.17.9"
colored = "3.0.0"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
lazy_static = "1.0.0"
aes-gcm = "0.10.3"
argon2 = "0.5.3"
